--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">where life happens</span>
             </h1>
-            <a href="#" class="btn btn-white btn-animated">
+            <a href="#" class="btn btn-white">
                 Discover our tours
             </a>
         </div>
